[package]
name = "svrbsctl"
version = "0.2.1"
authors = ["Andrew Gunnerson <chillermillerlong@hotmail.com>"]
edition = "2018"

[dependencies]
btleplug = "0.10.0"
futures = "0.3.24"
thiserror = "1.0.33"
uuid = "1.1.2"

[dependencies.clap]
version = "3.2.20"
features = ["derive"]

[dependencies.tokio]
version = "1.21.0"
features = ["rt-multi-thread", "macros"]
