[package]
name = "svrbsctl"
version = "0.2.3"
authors = ["Andrew Gunnerson <chillermillerlong@hotmail.com>"]
edition = "2018"

[dependencies]
btleplug = "0.10.3"
futures = "0.3.25"
thiserror = "1.0.37"
uuid = "1.2.2"

[dependencies.clap]
version = "4.0.26"
features = ["derive"]

[dependencies.tokio]
version = "1.22.0"
features = ["rt-multi-thread", "macros"]
