[package]
name = "svrbsctl"
version = "0.2.4"
authors = ["Andrew Gunnerson <chillermillerlong@hotmail.com>"]
edition = "2021"

[dependencies]
btleplug = "0.11.5"
futures = "0.3.26"
thiserror = "1.0.38"
uuid = "1.3.0"

[dependencies.clap]
version = "4.1.6"
features = ["derive"]

[dependencies.tokio]
version = "1.25.0"
features = ["rt-multi-thread", "macros"]
